# langtalk

./: main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/langtalk/: main.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/components/: TheWelcome.vue  VoiceRecorder.vue
